apps/shop/payment/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-payment-dev
spec:
  host: shop-payment.shop-payment.svc.cluster.local
  subsets:
  - name: shop-payment-dev
    labels:
      app: shop-payment
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-payment-dev-d1a
    labels:
      app: shop-payment
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
